--- a/newstyle.css
+++ b/newstyle.css
@@ -1,3 +1,8 @@
+html{
+	height: 100vh;
+	scroll-behavior: smooth;
+}
+
 *{
 	padding: 0;
 	margin: 0;
@@ -7,13 +12,19 @@
 
 body{
 	width: 100%;
-	box-sizing: border-box;
+	
 	background-color: white;
+
+	min-height:100vh; 
+
+	display: flex;
+	flex-direction:column;
 }
 
 .menu-bar{
 	background: #21221F;
 	text-align: center;
+	z-index: 99;
 }
 
 
@@ -88,10 +99,10 @@ body{
 footer {
 	position: absolute;
 	margin-top: 0%;
-	width:100%;
+	width:94%;
     padding: 3%;
     text-align: center;
-    justify-content: space-around;
+    
 	background:#21221F;
 	z-index: 0;
 
@@ -162,4 +173,11 @@ p{
 }
 #back-to-top:hover {
     background: white;
+}
+
+.center{
+	display:block;
+	margin-left: auto;
+	margin-right: auto;
+	width:50%;
 }
